src/styles/globals.css
﻿@tailwind base;
@tailwind components;
@tailwind utilities;


/* Custom fonts */
@font-face {
    font-family: Arial;
    src: url('../assets/fonts/arial/Arial.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
    font-display: swap;
}
@font-face {
    font-family: Arial;
    src: url('../assets/fonts/arial/Arial-Italic.ttf') format('truetype');
    font-weight: 400;
    font-style: italic;
    font-display: swap;
}
@font-face {
    font-family: Arial;
    src: url('../assets/fonts/arial/Arial-Bold.ttf') format('truetype');
    font-weight: 700;
    font-style: normal;
    font-display: swap;
}
@font-face {
    font-family: Arial;
    src: url('../assets/fonts/arial/Arial-BoldItalic.ttf') format('truetype');
    font-weight: 700;
    font-style: italic;
    font-display: swap;
}
@font-face {
    font-family: JetBrains Mono;
    src: url('../assets/fonts/jetbrains-mono/JetBrainsMonoNerdFont-Regular.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
    font-display: swap;
}
@font-face {
    font-family: JetBrains Mono;
    src: url('../assets/fonts/jetbrains-mono/JetBrainsMonoNerdFont-Italic.ttf') format('truetype');
    font-weight: 400;
    font-style: italic;
    font-display: swap;
}
@font-face {
    font-family: JetBrains Mono;
    src: url('../assets/fonts/jetbrains-mono/JetBrainsMonoNerdFont-SemiBold.ttf') format('truetype');
    font-weight: 600;
    font-style: normal;
    font-display: swap;
}
@font-face {
    font-family: JetBrains Mono;
    src: url('../assets/fonts/jetbrains-mono/JetBrainsMonoNerdFont-SemiBoldItalic.ttf') format('truetype');
    font-weight: 600;
    font-style: italic;
    font-display: swap;
}
@font-face {
    font-family: JetBrains Mono;
    src: url('../assets/fonts/jetbrains-mono/JetBrainsMonoNerdFont-Bold.ttf') format('truetype');
    font-weight: 700;
    font-style: normal;
    font-display: swap;
}
@font-face {
    font-family: JetBrains Mono;
    src: url('../assets/fonts/jetbrains-mono/JetBrainsMonoNerdFont-BoldItalic.ttf') format('truetype');
    font-weight: 700;
    font-style: italic;
    font-display: swap;
}
/* ... */

